--- a/src/components/main-page/main-page.module.css
+++ b/src/components/main-page/main-page.module.css
@@ -2,24 +2,24 @@
   background-image: url("../../images/bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 100vh;
-  height: 100%;
   display: flex;
   flex-direction: column;
+  height: 100%;
   justify-content: center;
+  min-height: 100vh;
 }
 
 .container {
-  max-width: 1280px;
   margin: 0 auto;
+  max-width: 1280px;
 }
 
 .title_box {
+  align-items: center;
   display: flex;
   justify-content: center;
-  align-items: center;
-  width: 1280px;
   margin: 0 auto;
+  width: 1280px;
 }
 
 .title {
@@ -29,27 +29,31 @@
 
 .fibonacci_title {
   display: inline-block;
-  writing-mode: vertical-lr;
-  transform: rotate(180deg);
   margin-left: -6px;
+  transform: rotate(180deg);
+  writing-mode: vertical-lr;
 }
 
 .cards_box {
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  max-width: 1240px;
-  margin: 34px 0 64px;
   align-self: center;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-rows: 1fr 1fr;
+  margin: 34px 0 64px;
+  max-width: 1240px;
+  width: 100%;
 }
 
 .card {
-  width: 400px;
-  height: 220px;
-  cursor: pointer;
-  transition: var(--common-transition);
+  background-position: center;
+  background-repeat: no-repeat;
   border-radius: 20px;
+  cursor: pointer;
+  height: 220px;
+  transition: var(--common-transition);
+  width: 100%;
+  background-size: cover;
 }
 
 .string {
@@ -112,16 +116,82 @@
 }
 
 .dot {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
   background-color: var(--text-color-secondary);
+  border-radius: 50%;
+  height: 10px;
+  width: 10px;
 }
 
 .copyright {
   margin: 28px auto 0;
-  text-align: right;
-  padding-bottom: 18px;
   max-width: 1240px;
   min-width: 1240px;
+  padding-bottom: 18px;
+  text-align: right;
+}
+
+@media screen and (max-width: 1280px) {
+  .title_box {
+    width: 100%;
+    max-width: 1280px;
+  }
+
+  .title {
+    font-size: 10vw;
+    line-height: 10vw;
+  }
+
+  .cards_box {
+    box-sizing: border-box;
+    padding: 16px;
+  }
+
+  .copyright {
+    min-width: auto;
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .cards_box {
+    align-self: center;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-rows: auto;
+    margin: 34px 0 64px;
+    max-width: 1240px;
+    width: 100%;
+    padding: 12px;
+  }
+
+  .card {
+    height: 200px;
+  }
+
+  .title_box {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .title {
+    align-self: center;
+    font-size: 10vw;
+    line-height: 10vw;
+  }
+
+  .fibonacci_title {
+    display: inline-flex;
+    align-self: center;
+    margin-left: 0;
+    transform: rotate(0deg);
+    writing-mode: horizontal-tb;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .card {
+    height: 333px;
+  }
 }
