feat: добавляет реализацию алгоритма отображения последовательности Фибоначчи.

--- a/src/components/fibonacci-page/fibonacci-page.module.css
+++ b/src/components/fibonacci-page/fibonacci-page.module.css
@@ -2,7 +2,7 @@
   align-self: center;
   display: flex;
   gap: 12px;
-  margin-bottom: 120px;
+  margin-bottom: 48px;
   max-width: 522px;
   width: 100%;
 }
@@ -11,7 +11,11 @@
   align-self: center;
   display: flex;
   justify-content: center;
-  gap: 16px;
+  gap: 48px 16px;
   flex-wrap: wrap;
-  max-width: 1040px;
+  max-width: 944px;
+}
+
+.circle_invisible {
+  display: none;
 }
