--- a/src/components/ui/column/column.module.css
+++ b/src/components/ui/column/column.module.css
@@ -1,8 +1,9 @@
 .content {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   width: 50px;
 }
 
